--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -303,19 +303,32 @@
                     </TabItem.Header>
                     <TabItem.Content>
                         <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="auto"/>
-                                <RowDefinition Height="auto"/>
                             </Grid.RowDefinitions>
-                            <DataGrid Grid.Row="0" ItemsSource="{Binding Manufacturers}" SelectedItem="{Binding SelectedManufacturer}" AutoGenerateColumns="False" HorizontalGridLinesBrush="DarkGray"
+                            <DataGrid Grid.Row="0" ItemsSource="{Binding Sales}" SelectedItem="{Binding SelectedSale}" AutoGenerateColumns="False" HorizontalGridLinesBrush="DarkGray"
                                 RowBackground="LightGray" AlternatingRowBackground="White" CanUserAddRows="False" IsReadOnly="True">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
-                                    <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+                                    <DataGridTextColumn Header="Sum" Binding="{Binding Sum}"/>
+                                    <DataGridTextColumn Header="CashierId" Binding="{Binding CashierId}"/>
+                                    <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat=\{0:dd.MM.yy HH:mm:ss\}}"/>
                                 </DataGrid.Columns>
                             </DataGrid>
-                            <Grid Grid.Row="1">
+                            <DataGrid Grid.Column="1" ItemsSource="{Binding SaleItems}" AutoGenerateColumns="False" HorizontalGridLinesBrush="DarkGray"
+                                RowBackground="LightGray" AlternatingRowBackground="White" CanUserAddRows="False" IsReadOnly="True">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+                                    <DataGridTextColumn Header="ProductName" Binding="{Binding ProductName}"/>
+                                    <DataGridTextColumn Header="UnitPrice" Binding="{Binding UnitPrice}"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                            <Grid Grid.Row="1" Grid.ColumnSpan="2">
                                 <Button Command="{Binding RefreshSales}" Grid.Column="0" HorizontalAlignment="Center">Обновить</Button>
                             </Grid>
                         </Grid>
